CMAKE_MINIMUM_REQUIRED(VERSION 2.0)

project(Moodvie)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_FLAGS_RELEASE "/MT")
set(CMAKE_CXX_FLAGS_DEBUG "/MTd")

ADD_SUBDIRECTORY(googletest)

ADD_EXECUTABLE(moodvie 
	main.cpp)

ADD_EXECUTABLE(test
    unit_test.cpp)

TARGET_LINK_LIBRARIES(test gtest)
TARGET_COMPILE_DEFINITIONS(test PRIVATE gtest_disable_pthreads=ON)